@@ -2,7 +2,7 @@
 # Kernel/System/Crypt/SMIME.pm - the main crypt module
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: SMIME.pm,v 1.13 2007-10-02 10:37:19 mh Exp $
+# $Id: SMIME.pm,v 1.14 2007-12-17 09:27:34 ot Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -15,7 +15,7 @@ use strict;
 use warnings;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.13 $) [1];
+$VERSION = qw($Revision: 1.14 $) [1];
 
 =head1 NAME
 
@@ -44,6 +44,9 @@ sub _Init {
     else {
         $Self->{CertPathArg} = '';
     }
+
+    # ensure that there is a random state file that we can write to (otherwise openssl will bail
+    $ENV{RANDFILE} ||= $Self->{ConfigObject}->Get('TempDir') . '/.rnd';
 
     return $Self;
 }
@@ -657,7 +660,7 @@ sub CertificateAttributes {
         $Attributes{$Key} = $Line;
     }
     if ( $Attributes{Hash} ) {
-        my $Private = $Self->PrivateGet( Hash => $Attributes{Hash} );
+        my ($Private) = $Self->PrivateGet( Hash => $Attributes{Hash} );
         if ($Private) {
             $Attributes{Private} = 'Yes';
         }
@@ -928,6 +931,6 @@ did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.13 $ $Date: 2007-10-02 10:37:19 $
+$Revision: 1.14 $ $Date: 2007-12-17 09:27:34 $
 
 =cut
