@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.519 2007-12-13 01:36:22 martin Exp $
+# $Id: CHANGES,v 1.520 2007-12-17 09:27:34 ot Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 CVS HEAD (????/??/??)
+ - (2007/12/17) Fixed bug# 2539 - SMIME signing was broken for private keys that
+   have no passphrase and when openssl is unable to write to random state file.
  - (2007/12/11) Fixed bug# 2479 - Unable to retrieve attachments bigger than
     3Mb (on Oracle DB). Changed default read size from 4 MB to 40 MB in
     Kernel/System/DB/oracle.pm:
